[package]
name = "tokenize"
version = "0.1.0"
license = "BSD-3-Clause"
description = "Implementation of the Tokenize specification in Rust"
repository = "https://github.com/TheOddGarlic/tokenize-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
base64 = "0.13"
hmac-sha256 = "1.1"
rust-crypto = "0.2"
